results/scraper/box64/441
Failure compiling box64 on Pi 4 x64
Hello,

So I am following these steps here in order to compile the box64:

https://pimylifeup.com/raspberry-pi-x64/

When I attempt to run the "make" command, it just fails with the following regarding INT128 (warning its quite a large output, ill submit the whole thing via txt file):

[box64 compiler error.txt](https://github.com/ptitSeb/box64/files/9941893/box64.compiler.error.txt)

In file included from /home/pi/box64/src/dynarec/arm64/dynarec_arm64_helper.h:19,
                 from /home/pi/box64/src/dynarec/arm64/dynarec_arm64_emit_tests.c:24:
/home/pi/box64/src/include/../emu/x64primop.h: In function ‘imul64_direct’:
/home/pi/box64/src/include/../emu/x64primop.h:567:2: error: expected expression before ‘__int128’
  __int128 res = (__int128)(int64_t)d * (int64_t)s;
  ^~~~~~~~
/home/pi/box64/src/include/../emu/x64primop.h:569:22: error: ‘res’ undeclared (first use in this function); did you mean ‘rex_s’?
  *res_lo = (uint64_t)res;
                      ^~~
                      rex_s
/home/pi/box64/src/include/../emu/x64primop.h:569:22: note: each undeclared identifier is reported only once for each function it appears in
/home/pi/box64/src/include/../emu/x64primop.h: In function ‘mul64_rax’:
/home/pi/box64/src/include/../emu/x64primop.h:613:11: error: ‘__int128’ is not supported on this target
  unsigned __int128 res = (unsigned __int128)R_RAX * s;
           ^~~~~~~~
/home/pi/box64/src/include/../emu/x64primop.h:613:36: error: ‘__int128’ is not supported on this target
  unsigned __int128 res = (unsigned __int128)R_RAX * s;
                                    ^~~~~~~~
/home/pi/box64/src/include/../emu/x64primop.h:615:40: warning: right shift count >= width of type [-Wshift-count-overflow]
  emu->op1.u64 = R_RDX = (uint64_t)(res >> 64);
                                        ^~
make[2]: *** [CMakeFiles/native_pass0.dir/build.make:76: CMakeFiles/native_pass0.dir/src/dynarec/arm64/dynarec_arm64_emit_tests.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:117: CMakeFiles/native_pass0.dir/all] Error 2
make: *** [Makefile:163: all] Error 2

I confirmed that the OS is 100% 64-bit aarch64.

root@dev-rpi02:/home/pi/box64/build# uname -a
Linux dev-rpi02.knightmare.me 5.10.103-v8+ #1529 SMP PREEMPT Tue Mar 8 12:26:46 GMT 2022 aarch64 GNU/Linux
root@dev-rpi02:/home/pi/box64/build# lscpu
Architecture:        aarch64
Byte Order:          Little Endian
CPU(s):              4
On-line CPU(s) list: 0-3
Thread(s) per core:  1
Core(s) per socket:  4
Socket(s):           1
Vendor ID:           ARM
Model:               3
Model name:          Cortex-A72
Stepping:            r0p3
CPU max MHz:         1500.0000
CPU min MHz:         600.0000
BogoMIPS:            108.00
Flags:               fp asimd evtstrm crc32 cpuid

Any ideas on how I can get this to compile? It might be worth noting that I just did the x86 using that sites other guide, but then it told me to move to x64 and install it as well, x86 compiling went fine so I am at a loss here.

Thank you!